--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <title>FAQ Accordion Card</title</title>
+    <title>FAQ Accordion Card</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Inicio do meu primeiro projeto</h1>
+    <img src="images/bg-pattern-desktop.svg">
   </body>
+  <main>
+    <img id="box" src="images/illustration-box-desktop.svg">
+    <img id="woman" src="images/illustration-woman-online-desktop.svg">
+  </main>
+
 </html>
