add fonts and reset css

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <title>FAQ Accordion Card</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <img src="images/bg-pattern-desktop.svg">
-  </body>
-  <main>
-    <img id="box" src="images/illustration-box-desktop.svg">
-    <img id="woman" src="images/illustration-woman-online-desktop.svg">
-  </main>
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <title>FAQ Accordion Card</title>
+</head>
+ <body>
+  <img src="images/bg-pattern-desktop.svg">
+ </body>
+ <main>
+  <img id="box" src="images/illustration-box-desktop.svg">
+  <img id="woman" src="images/illustration-woman-online-desktop.svg">
+ </main>
 </html>
