add divs and class

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
   <title>FAQ Accordion Card</title>
 </head>
+
  <body>
-  <img src="images/bg-pattern-desktop.svg">
+    <main>
+         <div class="left">
+             <img class="desktop-illustration" id="woman" src="images/illustration-woman-online-desktop.svg">
+             <img class="box" src="images/illustration-box-desktop.svg">
+             <img class="bg-pattern" src="images/bg-pattern-desktop.svg">
+        </div>
+    </main>
  </body>
- <main>
-  <img id="box" src="images/illustration-box-desktop.svg">
-  <img id="woman" src="images/illustration-woman-online-desktop.svg">
- </main>
+
 </html>
