--- a/index.html
+++ b/index.html
@@ -10,15 +10,56 @@
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
   <title>FAQ Accordion Card</title>
 </head>
+<body>
+ <main>
+     <div class="left">
+         <img class="desktop-illustration" id="woman" src="images/illustration-woman-online-desktop.svg" alt="woman in desktop">
+         <img class="box" src="images/illustration-box-desktop.svg" alt="orange box">
+         <img class="bg-pattern" src="images/bg-pattern-desktop.svg" alt="background pattern">
+     </div>
 
- <body>
-    <main>
-         <div class="left">
-             <img class="desktop-illustration" id="woman" src="images/illustration-woman-online-desktop.svg">
-             <img class="box" src="images/illustration-box-desktop.svg">
-             <img class="bg-pattern" src="images/bg-pattern-desktop.svg">
-        </div>
-    </main>
- </body>
+     <div class="right">
+         <h1 class="title">FAQ</h1>
+
+         <div class="accordion-container">
+             <div class="accordion"><p class="question">How many team members can I invite?</p><img class="arrow" src="./images/icon-arrow-down.svg" alt="icon-arrow-down"></div>
+             <div class="answer">
+                 You can invite up to 2 additional users on the Free plan. There is no limit on
+                 team members for the Premium plan.
+             </div>
+         </div>
+
+         <div class="accordion-container">
+             <div class="accordion"><p class="question">What is the maximum file upload size?</p><img class="arrow" src="./images/icon-arrow-down.svg" alt="icon-arrow-down"></div>
+             <div class="answer">
+                 No more than 2GB. All files in your account must fit your allotted storage space.
+             </div>
+         </div>
+
+
+         <div class="accordion-container">
+             <div class="accordion"><p class="question">How do I reset my password?</p><img class="arrow" src="./images/icon-arrow-down.svg" alt="icon-arrow-down"></div>
+             <div class="answer">
+                 Click “Forgot password” from the login page or “Change password” from your profile page.
+                 A reset link will be emailed to you.
+             </div>
+         </div>
+
+         <div class="accordion-container">
+             <div class="accordion"><p class="question">Can I cancel my subscription?</p><img class="arrow" src="./images/icon-arrow-down.svg" alt="icon-arrow-down"></div>
+             <div class="answer">
+                 Yes! Send us a message and we’ll process your request no questions asked.
+             </div>
+         </div>
+
+         <div class="accordion-container">
+             <div class="accordion"><p class="question">Do you provide additional support?</p><img class="arrow" src="./images/icon-arrow-down.svg" alt="icon-arrow-down"></div>
+             <div class="answer">
+                 Chat and email support is available 24/7. Phone lines are open during normal business hours.
+             </div>
+         </div>
+     </div>
+ </main>
+</body>
 
 </html>
